@@ -1,1 +1,7 @@
 0.1.0
+
+* Access Live data from open.wien.at
+* List Stations
+* Search by Stations
+* Favourites
+* Show Failures
